Eliminación de búsqueda binaria, clase DictData y otras modificaciones